--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.QvickdesignsystemAOS"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        tools:replace="android:theme">
         <activity
             android:name=".MainActivity"
             android:exported="true"
