--- a/qvick-design-module/src/main/AndroidManifest.xml
+++ b/qvick-design-module/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -7,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.QvickdesignsystemAOS">
+        android:theme="@style/Theme.QvickdesignsystemAOS"
+        tools:replace="android:theme">
         <activity
             android:name=".ui.MainActivity"
             android:exported="true"
